# Kodutöö/I/src/openapi.json
@@ -19,6 +19,18 @@
         "type": "string",
         "example": "Maasikas"
       },
+      "email": {
+        "type": "string",
+        "example": "mari@mari.ee"
+      },
+      "password": {
+        "type": "string",
+        "example": "BadExampleQwerty123"
+      },
+      "role": {
+        "type": "string",
+        "example": "Admin"
+      },
       "subject": {
         "type": "string",
         "example": "Matemaatika"
@@ -34,6 +46,44 @@
       "room": {
         "type": "string",
         "example": "Arvutilabor 203"
+      },
+      "token": {
+        "type": "string",
+        "example": "cK8qIwXBb06nFu4XBkS1QT2CoJ34CldH"
+      },
+      "login": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "$ref": "#/components/schemas/email"
+          },
+          "password": {
+            "$ref": "#/components/schemas/password"
+          }
+        }
+      },
+      "users": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "$ref": "#/components/schemas/id"
+          },
+          "firstName": {
+            "$ref": "#/components/schemas/firstName"
+          },
+          "lastName": {
+            "$ref": "#/components/schemas/lastName"
+          },
+          "email": {
+            "$ref": "#/components/schemas/email"
+          },
+          "password": {
+            "$ref": "#/components/schemas/password"
+          },
+          "role": {
+            "$ref": "#/components/schemas/role"
+          }
+        }
       },
       "lecturer": {
         "type": "object",
@@ -91,9 +141,385 @@
           }
         }
       }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
     }
   },
   "paths": {
+    "/login": {
+      "parameters": [],
+      "post": {
+        "tags": ["Login"],
+        "description": "Login",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "$ref": "#/components/schemas/email"
+                  },
+                  "password": {
+                    "$ref": "#/components/schemas/password"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Return token",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/token"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Not Authorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "Check credentials": {
+                    "value": {
+                      "error": "Check credentials"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "description": "User Id",
+          "schema": {
+            "type": "number"
+          }
+        }
+      ],
+
+      "get": {
+        "tags": ["Users"],
+        "description": "Get user by id",
+        "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return user by id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/users"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "No user found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "Invalid id": {
+                    "value": {
+                      "error": "No valid id provided"
+                    }
+                  },
+                  "No user found": {
+                    "value": {
+                      "error": "No user found with id: 1"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Users"],
+        "description": "Delete user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "user deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "No user found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "Invalid id": {
+                    "value": {
+                      "error": "No valid id provided"
+                    }
+                  },
+                  "No room found": {
+                    "value": {
+                      "error": "user not found with id: 1"
+                    }
+                  },
+                  "Don't have permisssion": {
+                    "value": {
+                      "error": "You have no permission for this"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "tags": ["Users"],
+        "description": "Update user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "user": {
+                    "$ref": "#/components/schemas/users"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "204": {
+            "description": "User updated",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "No user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "Invalid id": {
+                    "value": {
+                      "error": "No valid id provided"
+                    }
+                  },
+                  "No user found": {
+                    "value": {
+                      "error": "No user found with id: 1"
+                    }
+                  },
+                  "Nothing to update": {
+                    "value": {
+                      "error": "Nothing to update"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "tags": ["All Users"],
+        "description": "Get all users by id",
+        "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return user by id",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "user": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/users"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Users"],
+        "description": "Add new user",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "firstName": {
+                    "$ref": "#/components/schemas/firstName"
+                  },
+                  "lastName": {
+                    "$ref": "#/components/schemas/lastName"
+                  },
+                  "email": {
+                    "$ref": "#/components/schemas/email"
+                  },
+                  "password": {
+                    "$ref": "#/components/schemas/password"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "$ref": "#/components/schemas/id"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Required data is missing",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "examples": {
+                  "No first name": {
+                    "value": {
+                      "error": "First name is missing"
+                    }
+                  },
+                  "No last name": {
+                    "value": {
+                      "error": "Last name is missing"
+                    }
+                  },
+                  "No password": {
+                    "value": {
+                      "error": "Password is missing"
+                    }
+                  },
+                  "No email": {
+                    "value": {
+                      "error": "Email is missing"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/lecturer/{id}": {
       "parameters": [
         {
@@ -110,6 +536,11 @@
         "tags": ["Lecturer"],
         "description": "Get lecturer by id",
         "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Return lecturer by id",
@@ -159,6 +590,11 @@
       "delete": {
         "tags": ["Lecturer"],
         "description": "Delete lecturer",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "204": {
             "description": "Lecturer deleted",
@@ -207,6 +643,11 @@
       "patch": {
         "tags": ["Lecturer"],
         "description": "Update Lecturer",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -279,6 +720,11 @@
       "post": {
         "tags": ["Lecturer"],
         "description": "Add new lecturer",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -358,6 +804,11 @@
         "tags": ["Subjects"],
         "description": "Get subject by id",
         "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Return subject by id",
@@ -407,6 +858,11 @@
       "delete": {
         "tags": ["Subjects"],
         "description": "Delete subject",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "204": {
             "description": "subject deleted",
@@ -450,6 +906,11 @@
       "patch": {
         "tags": ["Subjects"],
         "description": "Update subject",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -517,6 +978,11 @@
       "post": {
         "tags": ["Subjects"],
         "description": "Add new subject",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -612,6 +1078,11 @@
         "tags": ["Course"],
         "description": "Get course by id",
         "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Return course by id",
@@ -661,6 +1132,11 @@
       "delete": {
         "tags": ["Course"],
         "description": "Delete course",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "204": {
             "description": "Course deleted",
@@ -709,6 +1185,11 @@
       "patch": {
         "tags": ["Course"],
         "description": "Update Course",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -773,6 +1254,11 @@
       "post": {
         "tags": ["Course"],
         "description": "Add new course",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -844,6 +1330,11 @@
         "tags": ["Room"],
         "description": "Get room by id",
         "parameters": [],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "Return room by id",
@@ -893,6 +1384,11 @@
       "delete": {
         "tags": ["Room"],
         "description": "Delete room",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "204": {
             "description": "Room deleted",
@@ -936,6 +1432,11 @@
       "patch": {
         "tags": ["Room"],
         "description": "Update Room",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -1000,6 +1501,11 @@
       "post": {
         "tags": ["Room"],
         "description": "Add new room",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "requestBody": {
           "content": {
             "application/json": {
